Thu Dec 29 07:29:38 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:

          Added Comment regarding new Endpoint Selector.

Thu Dec 29 06:47:37 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tao/Strategies/OC_Endpoint_Selector_Factory.cpp:

          Wrapped plain text string in ACE_TEXT () to avoid problems on
          wide-character builds.

Wed Dec 28 18:20:23 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/Callback_Quoter/Makefile.am:

          Regenerated.

        * examples/Callback_Quoter/Callback_Quoter.mpc:

          Add *_IDL projects for compiling *.idl files.  This eliminates
          duplicate rules that would otherwise result when Makefile.am's
          are aggregated in the automake build.

Wed Dec 28 17:07:23 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/AMH/Sink_Server/Makefile.am:
        * examples/Buffered_AMI/Makefile.am:
        * examples/Buffered_Oneways/Makefile.am:

          Regenerated.

        * examples/AMH/Sink_Server/Sink_Server.mpc:
        * examples/Buffered_AMI/Buffered_AMI.mpc:
        * examples/Buffered_Oneways/Buffered_Oneways.mpc:

          Add *_IDL projects for compiling *.idl files.  This eliminates
          duplicate rules that would otherwise result when Makefile.am's
          are aggregated in the automake build.

Wed Dec 28 13:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Native_Exceptions/Native_Exceptions.mpc:
        * tests/UNKNOWN_Exception/UNKNOWN_Exception.mpc:
          Removed setting of idlflags, native exceptions are the default
          now and the overruling of the idlflags gives problem when
          trying to extend TAO_IDLFLAGS from the platform_macros.GNU
          file

Wed Dec 28 11:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Cubit/TAO/MT_Cubit/client.cpp:
          Made this test compiling again with VxWorks 6.1, the WIND_TCB