@@ -1,3 +1,12 @@
+Thu Dec 29 09:43:07 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * tao/PI/PI_PolicyFactory.cpp:
+        * tao/PI/ProcessingModePolicy.h:
+        * tao/PI/ProcessingModePolicy.pidl:
+
+          Took care of some TBD comments.  The TBD in the .pidl has been
+          changed into a Doxygen @todo.
+
 Thu Dec 29 07:29:38 2005  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * NEWS:
